// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SingleMeetup unit tests for anonymous user renders Single Meetup view correctly for anonymous user (smoke test) 1`] = `
<SingleMeetup
  meetups={
    Array [
      Meetup {
        "addComment": [Function],
        "addReview": [Function],
        "arranger": User {
          "addAttending": [Function],
          "addReviewed": [Function],
          "attending": Array [
            "1",
            "2",
          ],
          "cancelAttending": [Function],
          "email": "tjalle@yahoo.com",
          "firstName": "Tjalle",
          "getDetails": [Function],
          "getFullName": [Function],
          "id": "1",
          "lastName": "Bergkvist",
          "password": "grillkorv",
          "reviewed": Array [
            "1",
          ],
          "saveDetailsToLocalStorage": [Function],
          "saveIdToLocalStorage": [Function],
        },
        "attending": 54,
        "capacity": null,
        "comments": Array [
          Object {
            "id": "1",
            "submittedAt": 2021-12-16T14:58:33.837Z,
            "text": "Great day!",
            "userId": "2",
          },
          Object {
            "id": "2",
            "submittedAt": 2021-12-16T14:59:22.526Z,
            "text": "Yes, it was, thanks!",
            "userId": "1",
          },
          Object {
            "id": "3",
            "submittedAt": 2021-12-17T12:34:42.949Z,
            "text": "Damn, I missed this",
            "userId": null,
          },
        ],
        "date": 2021-08-28T17:00:00.000Z,
        "decreaseAttendants": [Function],
        "description": "We meet in the park with pizzas and eat them",
        "id": "1",
        "increaseAttendants": [Function],
        "keywords": Array [
          "food",
          "pizza",
          "picnic",
          "park",
          "stockholm",
        ],
        "location": Object {
          "city": "Stockholm",
          "street": "Vitabergsparken",
        },
        "online": false,
        "reviews": Array [
          Object {
            "id": "1",
            "meetupId": "1",
            "rating": 4,
          },
          Object {
            "id": "2",
            "meetupId": "1",
            "rating": 5,
          },
        ],
        "title": "Pizza Picnic",
        "url": null,
      },
      Meetup {
        "addComment": [Function],
        "addReview": [Function],
        "arranger": User {
          "addAttending": [Function],
          "addReviewed": [Function],
          "attending": Array [],
          "cancelAttending": [Function],
          "email": "babsan@yahoo.com",
          "firstName": "Barbro",
          "getDetails": [Function],
          "getFullName": [Function],
          "id": "3",
          "lastName": "Lundborg",
          "password": "password123",
          "reviewed": Array [],
          "saveDetailsToLocalStorage": [Function],
          "saveIdToLocalStorage": [Function],
        },
        "attending": 356,
        "capacity": 500,
        "comments": Array [],
        "date": 2021-10-31T18:00:00.000Z,
        "decreaseAttendants": [Function],
        "description": "Halloween party in the street",
        "id": "5",
        "increaseAttendants": [Function],
        "keywords": Array [
          "halloween",
          "masquerade",
          "street",
          "party",
          "scary",
        ],
        "location": Object {
          "city": "Stockholm",
          "street": "Strandvägen",
        },
        "online": false,
        "reviews": Array [],
        "title": "Halloween Street Party",
        "url": null,
      },
      Meetup {
        "addComment": [Function],
        "addReview": [Function],
        "arranger": User {
          "addAttending": [Function],
          "addReviewed": [Function],
          "attending": Array [],
          "cancelAttending": [Function],
          "email": "babsan@yahoo.com",
          "firstName": "Barbro",
          "getDetails": [Function],
          "getFullName": [Function],
          "id": "3",
          "lastName": "Lundborg",
          "password": "password123",
          "reviewed": Array [],
          "saveDetailsToLocalStorage": [Function],
          "saveIdToLocalStorage": [Function],
        },
        "attending": 234,
        "capacity": null,
        "comments": Array [],
        "date": 2022-01-10T10:00:00.000Z,
        "decreaseAttendants": [Function],
        "description": "Learn a new programming language from the ground up",
        "id": "2",
        "increaseAttendants": [Function],
        "keywords": Array [
          "programming",
          "it",
          "learn",
          "rust",
          "tech",
        ],
        "location": null,
        "online": true,
        "reviews": Array [],
        "title": "Rust course",
        "url": "https://www.udemy.com/course/rust-lang/",
      },
      Meetup {
        "addComment": [Function],
        "addReview": [Function],
        "arranger": User {
          "addAttending": [Function],
          "addReviewed": [Function],
          "attending": Array [],
          "cancelAttending": [Function],
          "email": "babsan@yahoo.com",
          "firstName": "Barbro",
          "getDetails": [Function],
          "getFullName": [Function],
          "id": "3",
          "lastName": "Lundborg",
          "password": "password123",
          "reviewed": Array [],
          "saveDetailsToLocalStorage": [Function],
          "saveIdToLocalStorage": [Function],
        },
        "attending": 5,
        "capacity": 5,
        "comments": Array [],
        "date": 2022-03-15T17:00:00.000Z,
        "decreaseAttendants": [Function],
        "description": "A small party",
        "id": "6",
        "increaseAttendants": [Function],
        "keywords": Array [
          "small",
          "safe",
          "party",
          "babsan",
          "limited",
        ],
        "location": Object {
          "city": "Stockholm",
          "street": "Storgatan 101",
        },
        "online": false,
        "reviews": Array [],
        "title": "Small party",
        "url": null,
      },
      Meetup {
        "addComment": [Function],
        "addReview": [Function],
        "arranger": User {
          "addAttending": [Function],
          "addReviewed": [Function],
          "attending": Array [
            "1",
          ],
          "cancelAttending": [Function],
          "email": "kenta@yahoo.com",
          "firstName": "Kenta",
          "getDetails": [Function],
          "getFullName": [Function],
          "id": "2",
          "lastName": "Andersson",
          "password": "bananpaj",
          "reviewed": Array [
            "1",
          ],
          "saveDetailsToLocalStorage": [Function],
          "saveIdToLocalStorage": [Function],
        },
        "attending": 23478,
        "capacity": 43883,
        "comments": Array [],
        "date": 2022-05-13T16:00:00.000Z,
        "decreaseAttendants": [Function],
        "description": "A classic football match between the south and the north",
        "id": "3",
        "increaseAttendants": [Function],
        "keywords": Array [
          "football",
          "spain",
          "sevilla",
          "sports",
        ],
        "location": Object {
          "city": "41005 Sevilla",
          "street": "C. Sevilla Fútbol Club",
        },
        "online": false,
        "reviews": Array [],
        "title": "Sevilla - Real Sociedad",
        "url": "https://www.udemy.com/course/rust-lang/",
      },
      Meetup {
        "addComment": [Function],
        "addReview": [Function],
        "arranger": User {
          "addAttending": [Function],
          "addReviewed": [Function],
          "attending": Array [
            "1",
            "2",
          ],
          "cancelAttending": [Function],
          "email": "tjalle@yahoo.com",
          "firstName": "Tjalle",
          "getDetails": [Function],
          "getFullName": [Function],
          "id": "1",
          "lastName": "Bergkvist",
          "password": "grillkorv",
          "reviewed": Array [
            "1",
          ],
          "saveDetailsToLocalStorage": [Function],
          "saveIdToLocalStorage": [Function],
        },
        "attending": 126,
        "capacity": null,
        "comments": Array [],
        "date": 2022-07-02T15:00:00.000Z,
        "decreaseAttendants": [Function],
        "description": "Classic Kite festival at Gärdet, bring your own kite!",
        "id": "4",
        "increaseAttendants": [Function],
        "keywords": Array [
          "kite",
          "picnic",
          "hobby",
          "stockholm",
          "park",
          "festival",
        ],
        "location": Object {
          "city": "Stockholm",
          "street": "Gärdet",
        },
        "online": false,
        "reviews": Array [],
        "title": "Kite festival",
        "url": null,
      },
    ]
  }
  user={null}
>
  <main
    className="meetup"
  >
    <MeetupHeader
      attending={false}
      isFullyBooked={false}
      isUpcomingEvent={true}
      meetup={
        Meetup {
          "addComment": [Function],
          "addReview": [Function],
          "arranger": User {
            "addAttending": [Function],
            "addReviewed": [Function],
            "attending": Array [],
            "cancelAttending": [Function],
            "email": "babsan@yahoo.com",
            "firstName": "Barbro",
            "getDetails": [Function],
            "getFullName": [Function],
            "id": "3",
            "lastName": "Lundborg",
            "password": "password123",
            "reviewed": Array [],
            "saveDetailsToLocalStorage": [Function],
            "saveIdToLocalStorage": [Function],
          },
          "attending": 234,
          "capacity": null,
          "comments": Array [],
          "date": 2022-01-10T10:00:00.000Z,
          "decreaseAttendants": [Function],
          "description": "Learn a new programming language from the ground up",
          "id": "2",
          "increaseAttendants": [Function],
          "keywords": Array [
            "programming",
            "it",
            "learn",
            "rust",
            "tech",
          ],
          "location": null,
          "online": true,
          "reviews": Array [],
          "title": "Rust course",
          "url": "https://www.udemy.com/course/rust-lang/",
        }
      }
      setAttending={[Function]}
      user={null}
    >
      <section>
        <h1
          className="upcomingHeader"
        >
          Rust course
        </h1>
        <h2>
          Learn a new programming language from the ground up
        </h2>
      </section>
    </MeetupHeader>
    <DetailsSection
      attending={false}
      isUpcomingEvent={true}
      meetup={
        Meetup {
          "addComment": [Function],
          "addReview": [Function],
          "arranger": User {
            "addAttending": [Function],
            "addReviewed": [Function],
            "attending": Array [],
            "cancelAttending": [Function],
            "email": "babsan@yahoo.com",
            "firstName": "Barbro",
            "getDetails": [Function],
            "getFullName": [Function],
            "id": "3",
            "lastName": "Lundborg",
            "password": "password123",
            "reviewed": Array [],
            "saveDetailsToLocalStorage": [Function],
            "saveIdToLocalStorage": [Function],
          },
          "attending": 234,
          "capacity": null,
          "comments": Array [],
          "date": 2022-01-10T10:00:00.000Z,
          "decreaseAttendants": [Function],
          "description": "Learn a new programming language from the ground up",
          "id": "2",
          "increaseAttendants": [Function],
          "keywords": Array [
            "programming",
            "it",
            "learn",
            "rust",
            "tech",
          ],
          "location": null,
          "online": true,
          "reviews": Array [],
          "title": "Rust course",
          "url": "https://www.udemy.com/course/rust-lang/",
        }
      }
      setAttending={[Function]}
      user={null}
    >
      <section
        className="details"
        id="meetup-details"
      >
        <div
          className="headerRow"
          title="location"
        >
          <img
            alt="Map pin icon"
            src="pin.png"
          />
          <p>
            Online event
          </p>
        </div>
        <div
          className="headerRow"
          title="date"
        >
          <img
            alt="Time icon"
            src="time.png"
          />
          <p>
            10 January 2022, 11:00
             
          </p>
        </div>
      </section>
    </DetailsSection>
    <ArrangerSection
      meetup={
        Meetup {
          "addComment": [Function],
          "addReview": [Function],
          "arranger": User {
            "addAttending": [Function],
            "addReviewed": [Function],
            "attending": Array [],
            "cancelAttending": [Function],
            "email": "babsan@yahoo.com",
            "firstName": "Barbro",
            "getDetails": [Function],
            "getFullName": [Function],
            "id": "3",
            "lastName": "Lundborg",
            "password": "password123",
            "reviewed": Array [],
            "saveDetailsToLocalStorage": [Function],
            "saveIdToLocalStorage": [Function],
          },
          "attending": 234,
          "capacity": null,
          "comments": Array [],
          "date": 2022-01-10T10:00:00.000Z,
          "decreaseAttendants": [Function],
          "description": "Learn a new programming language from the ground up",
          "id": "2",
          "increaseAttendants": [Function],
          "keywords": Array [
            "programming",
            "it",
            "learn",
            "rust",
            "tech",
          ],
          "location": null,
          "online": true,
          "reviews": Array [],
          "title": "Rust course",
          "url": "https://www.udemy.com/course/rust-lang/",
        }
      }
    >
      <section
        className="arranger"
      >
        <div
          className="headerRow"
        >
          <img
            alt="User icon"
            src="user.png"
          />
          <h3>
            Arranger:
          </h3>
        </div>
        <p>
          Barbro Lundborg
        </p>
        <p>
          Email: 
          babsan@yahoo.com
        </p>
      </section>
    </ArrangerSection>
    <CapacitySection
      isFullyBooked={false}
      isUpcomingEvent={true}
      meetup={
        Meetup {
          "addComment": [Function],
          "addReview": [Function],
          "arranger": User {
            "addAttending": [Function],
            "addReviewed": [Function],
            "attending": Array [],
            "cancelAttending": [Function],
            "email": "babsan@yahoo.com",
            "firstName": "Barbro",
            "getDetails": [Function],
            "getFullName": [Function],
            "id": "3",
            "lastName": "Lundborg",
            "password": "password123",
            "reviewed": Array [],
            "saveDetailsToLocalStorage": [Function],
            "saveIdToLocalStorage": [Function],
          },
          "attending": 234,
          "capacity": null,
          "comments": Array [],
          "date": 2022-01-10T10:00:00.000Z,
          "decreaseAttendants": [Function],
          "description": "Learn a new programming language from the ground up",
          "id": "2",
          "increaseAttendants": [Function],
          "keywords": Array [
            "programming",
            "it",
            "learn",
            "rust",
            "tech",
          ],
          "location": null,
          "online": true,
          "reviews": Array [],
          "title": "Rust course",
          "url": "https://www.udemy.com/course/rust-lang/",
        }
      }
    >
      <section
        className="capacity"
      >
        <div
          className="headerRow"
        >
          <img
            alt="House icon"
            src="house.png"
          />
          <p
            className="capacityInfo"
          >
            <strong>
              Capacity: 
            </strong>
            This is an online event with unlimited capacity
          </p>
        </div>
        <div
          className="capacityInfo"
        >
          <div
            className="attendedRow"
          >
            <img
              alt="User group icon"
              src="user-group.png"
            />
            <p>
              <strong>
                Attending: 
              </strong>
               
               234
            </p>
          </div>
        </div>
      </section>
    </CapacitySection>
    <CommentsSection
      meetup={
        Meetup {
          "addComment": [Function],
          "addReview": [Function],
          "arranger": User {
            "addAttending": [Function],
            "addReviewed": [Function],
            "attending": Array [],
            "cancelAttending": [Function],
            "email": "babsan@yahoo.com",
            "firstName": "Barbro",
            "getDetails": [Function],
            "getFullName": [Function],
            "id": "3",
            "lastName": "Lundborg",
            "password": "password123",
            "reviewed": Array [],
            "saveDetailsToLocalStorage": [Function],
            "saveIdToLocalStorage": [Function],
          },
          "attending": 234,
          "capacity": null,
          "comments": Array [],
          "date": 2022-01-10T10:00:00.000Z,
          "decreaseAttendants": [Function],
          "description": "Learn a new programming language from the ground up",
          "id": "2",
          "increaseAttendants": [Function],
          "keywords": Array [
            "programming",
            "it",
            "learn",
            "rust",
            "tech",
          ],
          "location": null,
          "online": true,
          "reviews": Array [],
          "title": "Rust course",
          "url": "https://www.udemy.com/course/rust-lang/",
        }
      }
      user={null}
    >
      <section
        className="comments"
      >
        <div
          className="headerRow"
        >
          <img
            alt="Comment icon"
            src="chat.png"
          />
          <h3>
            Comments
          </h3>
        </div>
        <p>
          This event has no comments yet
        </p>
        <button
          onClick={[Function]}
        >
          Add comment
        </button>
      </section>
    </CommentsSection>
    <LoginInfoSection>
      <section
        className="loginInfo"
        title="Log in to attend, comment and review Meetups"
      >
        <h3>
          Log in for a better experience
        </h3>
        <p>
          Logged in users can create their own events, register for upcoming events and rate events they visited!
        </p>
        <button
          onClick={[Function]}
        >
          Go to Login page
        </button>
      </section>
    </LoginInfoSection>
  </main>
</SingleMeetup>
`;

exports[`SingleMeetup unit tests for logged in user renders Single Meetup view correctly for logged in user (smoke test) 1`] = `
<SingleMeetup
  meetups={
    Array [
      Meetup {
        "addComment": [Function],
        "addReview": [Function],
        "arranger": User {
          "addAttending": [Function],
          "addReviewed": [Function],
          "attending": Array [
            "1",
            "2",
          ],
          "cancelAttending": [Function],
          "email": "tjalle@yahoo.com",
          "firstName": "Tjalle",
          "getDetails": [Function],
          "getFullName": [Function],
          "id": "1",
          "lastName": "Bergkvist",
          "password": "grillkorv",
          "reviewed": Array [
            "1",
          ],
          "saveDetailsToLocalStorage": [Function],
          "saveIdToLocalStorage": [Function],
        },
        "attending": 54,
        "capacity": null,
        "comments": Array [
          Object {
            "id": "1",
            "submittedAt": 2021-12-16T14:58:33.837Z,
            "text": "Great day!",
            "userId": "2",
          },
          Object {
            "id": "2",
            "submittedAt": 2021-12-16T14:59:22.526Z,
            "text": "Yes, it was, thanks!",
            "userId": "1",
          },
          Object {
            "id": "3",
            "submittedAt": 2021-12-17T12:34:42.949Z,
            "text": "Damn, I missed this",
            "userId": null,
          },
        ],
        "date": 2021-08-28T17:00:00.000Z,
        "decreaseAttendants": [Function],
        "description": "We meet in the park with pizzas and eat them",
        "id": "1",
        "increaseAttendants": [Function],
        "keywords": Array [
          "food",
          "pizza",
          "picnic",
          "park",
          "stockholm",
        ],
        "location": Object {
          "city": "Stockholm",
          "street": "Vitabergsparken",
        },
        "online": false,
        "reviews": Array [
          Object {
            "id": "1",
            "meetupId": "1",
            "rating": 4,
          },
          Object {
            "id": "2",
            "meetupId": "1",
            "rating": 5,
          },
        ],
        "title": "Pizza Picnic",
        "url": null,
      },
      Meetup {
        "addComment": [Function],
        "addReview": [Function],
        "arranger": User {
          "addAttending": [Function],
          "addReviewed": [Function],
          "attending": Array [],
          "cancelAttending": [Function],
          "email": "babsan@yahoo.com",
          "firstName": "Barbro",
          "getDetails": [Function],
          "getFullName": [Function],
          "id": "3",
          "lastName": "Lundborg",
          "password": "password123",
          "reviewed": Array [],
          "saveDetailsToLocalStorage": [Function],
          "saveIdToLocalStorage": [Function],
        },
        "attending": 356,
        "capacity": 500,
        "comments": Array [],
        "date": 2021-10-31T18:00:00.000Z,
        "decreaseAttendants": [Function],
        "description": "Halloween party in the street",
        "id": "5",
        "increaseAttendants": [Function],
        "keywords": Array [
          "halloween",
          "masquerade",
          "street",
          "party",
          "scary",
        ],
        "location": Object {
          "city": "Stockholm",
          "street": "Strandvägen",
        },
        "online": false,
        "reviews": Array [],
        "title": "Halloween Street Party",
        "url": null,
      },
      Meetup {
        "addComment": [Function],
        "addReview": [Function],
        "arranger": User {
          "addAttending": [Function],
          "addReviewed": [Function],
          "attending": Array [],
          "cancelAttending": [Function],
          "email": "babsan@yahoo.com",
          "firstName": "Barbro",
          "getDetails": [Function],
          "getFullName": [Function],
          "id": "3",
          "lastName": "Lundborg",
          "password": "password123",
          "reviewed": Array [],
          "saveDetailsToLocalStorage": [Function],
          "saveIdToLocalStorage": [Function],
        },
        "attending": 234,
        "capacity": null,
        "comments": Array [],
        "date": 2022-01-10T10:00:00.000Z,
        "decreaseAttendants": [Function],
        "description": "Learn a new programming language from the ground up",
        "id": "2",
        "increaseAttendants": [Function],
        "keywords": Array [
          "programming",
          "it",
          "learn",
          "rust",
          "tech",
        ],
        "location": null,
        "online": true,
        "reviews": Array [],
        "title": "Rust course",
        "url": "https://www.udemy.com/course/rust-lang/",
      },
      Meetup {
        "addComment": [Function],
        "addReview": [Function],
        "arranger": User {
          "addAttending": [Function],
          "addReviewed": [Function],
          "attending": Array [],
          "cancelAttending": [Function],
          "email": "babsan@yahoo.com",
          "firstName": "Barbro",
          "getDetails": [Function],
          "getFullName": [Function],
          "id": "3",
          "lastName": "Lundborg",
          "password": "password123",
          "reviewed": Array [],
          "saveDetailsToLocalStorage": [Function],
          "saveIdToLocalStorage": [Function],
        },
        "attending": 5,
        "capacity": 5,
        "comments": Array [],
        "date": 2022-03-15T17:00:00.000Z,
        "decreaseAttendants": [Function],
        "description": "A small party",
        "id": "6",
        "increaseAttendants": [Function],
        "keywords": Array [
          "small",
          "safe",
          "party",
          "babsan",
          "limited",
        ],
        "location": Object {
          "city": "Stockholm",
          "street": "Storgatan 101",
        },
        "online": false,
        "reviews": Array [],
        "title": "Small party",
        "url": null,
      },
      Meetup {
        "addComment": [Function],
        "addReview": [Function],
        "arranger": User {
          "addAttending": [Function],
          "addReviewed": [Function],
          "attending": Array [
            "1",
          ],
          "cancelAttending": [Function],
          "email": "kenta@yahoo.com",
          "firstName": "Kenta",
          "getDetails": [Function],
          "getFullName": [Function],
          "id": "2",
          "lastName": "Andersson",
          "password": "bananpaj",
          "reviewed": Array [
            "1",
          ],
          "saveDetailsToLocalStorage": [Function],
          "saveIdToLocalStorage": [Function],
        },
        "attending": 23478,
        "capacity": 43883,
        "comments": Array [],
        "date": 2022-05-13T16:00:00.000Z,
        "decreaseAttendants": [Function],
        "description": "A classic football match between the south and the north",
        "id": "3",
        "increaseAttendants": [Function],
        "keywords": Array [
          "football",
          "spain",
          "sevilla",
          "sports",
        ],
        "location": Object {
          "city": "41005 Sevilla",
          "street": "C. Sevilla Fútbol Club",
        },
        "online": false,
        "reviews": Array [],
        "title": "Sevilla - Real Sociedad",
        "url": "https://www.udemy.com/course/rust-lang/",
      },
      Meetup {
        "addComment": [Function],
        "addReview": [Function],
        "arranger": User {
          "addAttending": [Function],
          "addReviewed": [Function],
          "attending": Array [
            "1",
            "2",
          ],
          "cancelAttending": [Function],
          "email": "tjalle@yahoo.com",
          "firstName": "Tjalle",
          "getDetails": [Function],
          "getFullName": [Function],
          "id": "1",
          "lastName": "Bergkvist",
          "password": "grillkorv",
          "reviewed": Array [
            "1",
          ],
          "saveDetailsToLocalStorage": [Function],
          "saveIdToLocalStorage": [Function],
        },
        "attending": 126,
        "capacity": null,
        "comments": Array [],
        "date": 2022-07-02T15:00:00.000Z,
        "decreaseAttendants": [Function],
        "description": "Classic Kite festival at Gärdet, bring your own kite!",
        "id": "4",
        "increaseAttendants": [Function],
        "keywords": Array [
          "kite",
          "picnic",
          "hobby",
          "stockholm",
          "park",
          "festival",
        ],
        "location": Object {
          "city": "Stockholm",
          "street": "Gärdet",
        },
        "online": false,
        "reviews": Array [],
        "title": "Kite festival",
        "url": null,
      },
    ]
  }
  user={
    User {
      "addAttending": [Function],
      "addReviewed": [Function],
      "attending": Array [
        "1",
        "2",
      ],
      "cancelAttending": [Function],
      "email": "tjalle@yahoo.com",
      "firstName": "Tjalle",
      "getDetails": [Function],
      "getFullName": [Function],
      "id": "1",
      "lastName": "Bergkvist",
      "password": "grillkorv",
      "reviewed": Array [
        "1",
      ],
      "saveDetailsToLocalStorage": [Function],
      "saveIdToLocalStorage": [Function],
    }
  }
>
  <main
    className="meetup"
  >
    <MeetupHeader
      attending={true}
      isFullyBooked={false}
      isUpcomingEvent={false}
      meetup={
        Meetup {
          "addComment": [Function],
          "addReview": [Function],
          "arranger": User {
            "addAttending": [Function],
            "addReviewed": [Function],
            "attending": Array [
              "1",
              "2",
            ],
            "cancelAttending": [Function],
            "email": "tjalle@yahoo.com",
            "firstName": "Tjalle",
            "getDetails": [Function],
            "getFullName": [Function],
            "id": "1",
            "lastName": "Bergkvist",
            "password": "grillkorv",
            "reviewed": Array [
              "1",
            ],
            "saveDetailsToLocalStorage": [Function],
            "saveIdToLocalStorage": [Function],
          },
          "attending": 54,
          "capacity": null,
          "comments": Array [
            Object {
              "id": "1",
              "submittedAt": 2021-12-16T14:58:33.837Z,
              "text": "Great day!",
              "userId": "2",
            },
            Object {
              "id": "2",
              "submittedAt": 2021-12-16T14:59:22.526Z,
              "text": "Yes, it was, thanks!",
              "userId": "1",
            },
            Object {
              "id": "3",
              "submittedAt": 2021-12-17T12:34:42.949Z,
              "text": "Damn, I missed this",
              "userId": null,
            },
          ],
          "date": 2021-08-28T17:00:00.000Z,
          "decreaseAttendants": [Function],
          "description": "We meet in the park with pizzas and eat them",
          "id": "1",
          "increaseAttendants": [Function],
          "keywords": Array [
            "food",
            "pizza",
            "picnic",
            "park",
            "stockholm",
          ],
          "location": Object {
            "city": "Stockholm",
            "street": "Vitabergsparken",
          },
          "online": false,
          "reviews": Array [
            Object {
              "id": "1",
              "meetupId": "1",
              "rating": 4,
            },
            Object {
              "id": "2",
              "meetupId": "1",
              "rating": 5,
            },
          ],
          "title": "Pizza Picnic",
          "url": null,
        }
      }
      setAttending={[Function]}
      user={
        User {
          "addAttending": [Function],
          "addReviewed": [Function],
          "attending": Array [
            "1",
            "2",
          ],
          "cancelAttending": [Function],
          "email": "tjalle@yahoo.com",
          "firstName": "Tjalle",
          "getDetails": [Function],
          "getFullName": [Function],
          "id": "1",
          "lastName": "Bergkvist",
          "password": "grillkorv",
          "reviewed": Array [
            "1",
          ],
          "saveDetailsToLocalStorage": [Function],
          "saveIdToLocalStorage": [Function],
        }
      }
    >
      <section>
        <h1
          className="pastHeader"
        >
          Pizza Picnic
        </h1>
        <h2>
          We meet in the park with pizzas and eat them
        </h2>
      </section>
    </MeetupHeader>
    <DetailsSection
      attending={true}
      isUpcomingEvent={false}
      meetup={
        Meetup {
          "addComment": [Function],
          "addReview": [Function],
          "arranger": User {
            "addAttending": [Function],
            "addReviewed": [Function],
            "attending": Array [
              "1",
              "2",
            ],
            "cancelAttending": [Function],
            "email": "tjalle@yahoo.com",
            "firstName": "Tjalle",
            "getDetails": [Function],
            "getFullName": [Function],
            "id": "1",
            "lastName": "Bergkvist",
            "password": "grillkorv",
            "reviewed": Array [
              "1",
            ],
            "saveDetailsToLocalStorage": [Function],
            "saveIdToLocalStorage": [Function],
          },
          "attending": 54,
          "capacity": null,
          "comments": Array [
            Object {
              "id": "1",
              "submittedAt": 2021-12-16T14:58:33.837Z,
              "text": "Great day!",
              "userId": "2",
            },
            Object {
              "id": "2",
              "submittedAt": 2021-12-16T14:59:22.526Z,
              "text": "Yes, it was, thanks!",
              "userId": "1",
            },
            Object {
              "id": "3",
              "submittedAt": 2021-12-17T12:34:42.949Z,
              "text": "Damn, I missed this",
              "userId": null,
            },
          ],
          "date": 2021-08-28T17:00:00.000Z,
          "decreaseAttendants": [Function],
          "description": "We meet in the park with pizzas and eat them",
          "id": "1",
          "increaseAttendants": [Function],
          "keywords": Array [
            "food",
            "pizza",
            "picnic",
            "park",
            "stockholm",
          ],
          "location": Object {
            "city": "Stockholm",
            "street": "Vitabergsparken",
          },
          "online": false,
          "reviews": Array [
            Object {
              "id": "1",
              "meetupId": "1",
              "rating": 4,
            },
            Object {
              "id": "2",
              "meetupId": "1",
              "rating": 5,
            },
          ],
          "title": "Pizza Picnic",
          "url": null,
        }
      }
      setAttending={[Function]}
      user={
        User {
          "addAttending": [Function],
          "addReviewed": [Function],
          "attending": Array [
            "1",
            "2",
          ],
          "cancelAttending": [Function],
          "email": "tjalle@yahoo.com",
          "firstName": "Tjalle",
          "getDetails": [Function],
          "getFullName": [Function],
          "id": "1",
          "lastName": "Bergkvist",
          "password": "grillkorv",
          "reviewed": Array [
            "1",
          ],
          "saveDetailsToLocalStorage": [Function],
          "saveIdToLocalStorage": [Function],
        }
      }
    >
      <section
        className="details"
        id="meetup-details"
      >
        <div
          className="headerRow"
          title="location"
        >
          <img
            alt="Map pin icon"
            src="pin.png"
          />
          <p>
            Vitabergsparken, Stockholm
          </p>
        </div>
        <div
          className="headerRow"
          title="date"
        >
          <img
            alt="Time icon"
            src="time.png"
          />
          <p>
            28 August 2021, 19:00
             
            <em
              className="note"
            >
              (Event already took place)
            </em>
          </p>
        </div>
      </section>
    </DetailsSection>
    <ArrangerSection
      meetup={
        Meetup {
          "addComment": [Function],
          "addReview": [Function],
          "arranger": User {
            "addAttending": [Function],
            "addReviewed": [Function],
            "attending": Array [
              "1",
              "2",
            ],
            "cancelAttending": [Function],
            "email": "tjalle@yahoo.com",
            "firstName": "Tjalle",
            "getDetails": [Function],
            "getFullName": [Function],
            "id": "1",
            "lastName": "Bergkvist",
            "password": "grillkorv",
            "reviewed": Array [
              "1",
            ],
            "saveDetailsToLocalStorage": [Function],
            "saveIdToLocalStorage": [Function],
          },
          "attending": 54,
          "capacity": null,
          "comments": Array [
            Object {
              "id": "1",
              "submittedAt": 2021-12-16T14:58:33.837Z,
              "text": "Great day!",
              "userId": "2",
            },
            Object {
              "id": "2",
              "submittedAt": 2021-12-16T14:59:22.526Z,
              "text": "Yes, it was, thanks!",
              "userId": "1",
            },
            Object {
              "id": "3",
              "submittedAt": 2021-12-17T12:34:42.949Z,
              "text": "Damn, I missed this",
              "userId": null,
            },
          ],
          "date": 2021-08-28T17:00:00.000Z,
          "decreaseAttendants": [Function],
          "description": "We meet in the park with pizzas and eat them",
          "id": "1",
          "increaseAttendants": [Function],
          "keywords": Array [
            "food",
            "pizza",
            "picnic",
            "park",
            "stockholm",
          ],
          "location": Object {
            "city": "Stockholm",
            "street": "Vitabergsparken",
          },
          "online": false,
          "reviews": Array [
            Object {
              "id": "1",
              "meetupId": "1",
              "rating": 4,
            },
            Object {
              "id": "2",
              "meetupId": "1",
              "rating": 5,
            },
          ],
          "title": "Pizza Picnic",
          "url": null,
        }
      }
    >
      <section
        className="arranger"
      >
        <div
          className="headerRow"
        >
          <img
            alt="User icon"
            src="user.png"
          />
          <h3>
            Arranger:
          </h3>
        </div>
        <p>
          Tjalle Bergkvist
        </p>
        <p>
          Email: 
          tjalle@yahoo.com
        </p>
      </section>
    </ArrangerSection>
    <CapacitySection
      isFullyBooked={false}
      isUpcomingEvent={false}
      meetup={
        Meetup {
          "addComment": [Function],
          "addReview": [Function],
          "arranger": User {
            "addAttending": [Function],
            "addReviewed": [Function],
            "attending": Array [
              "1",
              "2",
            ],
            "cancelAttending": [Function],
            "email": "tjalle@yahoo.com",
            "firstName": "Tjalle",
            "getDetails": [Function],
            "getFullName": [Function],
            "id": "1",
            "lastName": "Bergkvist",
            "password": "grillkorv",
            "reviewed": Array [
              "1",
            ],
            "saveDetailsToLocalStorage": [Function],
            "saveIdToLocalStorage": [Function],
          },
          "attending": 54,
          "capacity": null,
          "comments": Array [
            Object {
              "id": "1",
              "submittedAt": 2021-12-16T14:58:33.837Z,
              "text": "Great day!",
              "userId": "2",
            },
            Object {
              "id": "2",
              "submittedAt": 2021-12-16T14:59:22.526Z,
              "text": "Yes, it was, thanks!",
              "userId": "1",
            },
            Object {
              "id": "3",
              "submittedAt": 2021-12-17T12:34:42.949Z,
              "text": "Damn, I missed this",
              "userId": null,
            },
          ],
          "date": 2021-08-28T17:00:00.000Z,
          "decreaseAttendants": [Function],
          "description": "We meet in the park with pizzas and eat them",
          "id": "1",
          "increaseAttendants": [Function],
          "keywords": Array [
            "food",
            "pizza",
            "picnic",
            "park",
            "stockholm",
          ],
          "location": Object {
            "city": "Stockholm",
            "street": "Vitabergsparken",
          },
          "online": false,
          "reviews": Array [
            Object {
              "id": "1",
              "meetupId": "1",
              "rating": 4,
            },
            Object {
              "id": "2",
              "meetupId": "1",
              "rating": 5,
            },
          ],
          "title": "Pizza Picnic",
          "url": null,
        }
      }
    >
      <section
        className="capacity"
      >
        <div
          className="capacityInfo"
        >
          <div
            className="attendedRow"
          >
            <img
              alt="User group icon"
              src="user-group.png"
            />
            54 people attended this event
          </div>
        </div>
      </section>
    </CapacitySection>
    <ReviewsSection
      meetup={
        Meetup {
          "addComment": [Function],
          "addReview": [Function],
          "arranger": User {
            "addAttending": [Function],
            "addReviewed": [Function],
            "attending": Array [
              "1",
              "2",
            ],
            "cancelAttending": [Function],
            "email": "tjalle@yahoo.com",
            "firstName": "Tjalle",
            "getDetails": [Function],
            "getFullName": [Function],
            "id": "1",
            "lastName": "Bergkvist",
            "password": "grillkorv",
            "reviewed": Array [
              "1",
            ],
            "saveDetailsToLocalStorage": [Function],
            "saveIdToLocalStorage": [Function],
          },
          "attending": 54,
          "capacity": null,
          "comments": Array [
            Object {
              "id": "1",
              "submittedAt": 2021-12-16T14:58:33.837Z,
              "text": "Great day!",
              "userId": "2",
            },
            Object {
              "id": "2",
              "submittedAt": 2021-12-16T14:59:22.526Z,
              "text": "Yes, it was, thanks!",
              "userId": "1",
            },
            Object {
              "id": "3",
              "submittedAt": 2021-12-17T12:34:42.949Z,
              "text": "Damn, I missed this",
              "userId": null,
            },
          ],
          "date": 2021-08-28T17:00:00.000Z,
          "decreaseAttendants": [Function],
          "description": "We meet in the park with pizzas and eat them",
          "id": "1",
          "increaseAttendants": [Function],
          "keywords": Array [
            "food",
            "pizza",
            "picnic",
            "park",
            "stockholm",
          ],
          "location": Object {
            "city": "Stockholm",
            "street": "Vitabergsparken",
          },
          "online": false,
          "reviews": Array [
            Object {
              "id": "1",
              "meetupId": "1",
              "rating": 4,
            },
            Object {
              "id": "2",
              "meetupId": "1",
              "rating": 5,
            },
          ],
          "title": "Pizza Picnic",
          "url": null,
        }
      }
      user={
        User {
          "addAttending": [Function],
          "addReviewed": [Function],
          "attending": Array [
            "1",
            "2",
          ],
          "cancelAttending": [Function],
          "email": "tjalle@yahoo.com",
          "firstName": "Tjalle",
          "getDetails": [Function],
          "getFullName": [Function],
          "id": "1",
          "lastName": "Bergkvist",
          "password": "grillkorv",
          "reviewed": Array [
            "1",
          ],
          "saveDetailsToLocalStorage": [Function],
          "saveIdToLocalStorage": [Function],
        }
      }
    >
      <section
        className="reviews"
      >
        <div
          className="headerRow"
        >
          <img
            alt="Star icon"
            src="star-empty.png"
          />
          <h3>
            Ratings
          </h3>
        </div>
        <p>
          This event has a 
          <span
            className="rating"
          >
            4.5
          </span>
           score out of 5 possible after 2 votes
        </p>
        <p>
          You already rated this event
        </p>
      </section>
    </ReviewsSection>
    <CommentsSection
      meetup={
        Meetup {
          "addComment": [Function],
          "addReview": [Function],
          "arranger": User {
            "addAttending": [Function],
            "addReviewed": [Function],
            "attending": Array [
              "1",
              "2",
            ],
            "cancelAttending": [Function],
            "email": "tjalle@yahoo.com",
            "firstName": "Tjalle",
            "getDetails": [Function],
            "getFullName": [Function],
            "id": "1",
            "lastName": "Bergkvist",
            "password": "grillkorv",
            "reviewed": Array [
              "1",
            ],
            "saveDetailsToLocalStorage": [Function],
            "saveIdToLocalStorage": [Function],
          },
          "attending": 54,
          "capacity": null,
          "comments": Array [
            Object {
              "id": "1",
              "submittedAt": 2021-12-16T14:58:33.837Z,
              "text": "Great day!",
              "userId": "2",
            },
            Object {
              "id": "2",
              "submittedAt": 2021-12-16T14:59:22.526Z,
              "text": "Yes, it was, thanks!",
              "userId": "1",
            },
            Object {
              "id": "3",
              "submittedAt": 2021-12-17T12:34:42.949Z,
              "text": "Damn, I missed this",
              "userId": null,
            },
          ],
          "date": 2021-08-28T17:00:00.000Z,
          "decreaseAttendants": [Function],
          "description": "We meet in the park with pizzas and eat them",
          "id": "1",
          "increaseAttendants": [Function],
          "keywords": Array [
            "food",
            "pizza",
            "picnic",
            "park",
            "stockholm",
          ],
          "location": Object {
            "city": "Stockholm",
            "street": "Vitabergsparken",
          },
          "online": false,
          "reviews": Array [
            Object {
              "id": "1",
              "meetupId": "1",
              "rating": 4,
            },
            Object {
              "id": "2",
              "meetupId": "1",
              "rating": 5,
            },
          ],
          "title": "Pizza Picnic",
          "url": null,
        }
      }
      user={
        User {
          "addAttending": [Function],
          "addReviewed": [Function],
          "attending": Array [
            "1",
            "2",
          ],
          "cancelAttending": [Function],
          "email": "tjalle@yahoo.com",
          "firstName": "Tjalle",
          "getDetails": [Function],
          "getFullName": [Function],
          "id": "1",
          "lastName": "Bergkvist",
          "password": "grillkorv",
          "reviewed": Array [
            "1",
          ],
          "saveDetailsToLocalStorage": [Function],
          "saveIdToLocalStorage": [Function],
        }
      }
    >
      <section
        className="comments"
      >
        <div
          className="headerRow"
        >
          <img
            alt="Comment icon"
            src="chat.png"
          />
          <h3>
            Comments
          </h3>
        </div>
        <ul
          className="commentList"
        >
          <li
            className="commentCard false"
            key="1"
            title="comment"
          >
            <p
              className="commentText"
            >
              Great day!
            </p>
            <p
              className="commentSignature"
            >
              <em>
                - Kenta Andersson, 16 December 2021, 15:58
              </em>
            </p>
          </li>
          <li
            className="commentCard you"
            key="2"
            title="comment"
          >
            <p
              className="commentText"
            >
              Yes, it was, thanks!
            </p>
            <p
              className="commentSignature"
            >
              <em>
                - You, 16 December 2021, 15:59
              </em>
            </p>
          </li>
          <li
            className="commentCard false"
            key="3"
            title="comment"
          >
            <p
              className="commentText"
            >
              Damn, I missed this
            </p>
            <p
              className="commentSignature"
            >
              <em>
                - Anonymous, 17 December 2021, 13:34
              </em>
            </p>
          </li>
        </ul>
        <button
          onClick={[Function]}
        >
          Add comment
        </button>
      </section>
    </CommentsSection>
  </main>
</SingleMeetup>
`;
